feat:finish the unit test and upgrade other code